# Ranking-Inference

./: .gitignore  LICENSE  README.md  pyproject.toml
Experiments/: .gitignore  EXPERIMENT_REPORT.md  eval_experiment_a.py  eval_experiment_b.py  experiment_a_beta_calibration.py  phase2_results.json  requirements.txt  results_experiment_a.json  results_experiment_a_partial.json  results_experiment_b.json  results_experiment_b_frank_only.json  run_all_logspace.sh  run_corpus_scaling.py  run_experiment_01.py  run_experiment_02.py  run_experiment_03.py  run_experiment_b_sequence.py  run_phase2.py
Experiments/docs/phase2_results/: PHASE2_PRELIMINARY_RESULTS.md  PHASE2_RESULTS.md
Experiments/exp01_mandelbrot_fit/config/: experiment_config.yaml
Experiments/exp01_mandelbrot_fit/data/: frequency_summary.json
Experiments/exp01_mandelbrot_fit/results/: mandelbrot_fit_results.json
Experiments/exp03_gap_signal/src/: compute_gap.py  (+3 more)
Experiments/exp04_halueval/: run.py
Experiments/exp05_truthfulqa/: run.py
Experiments/exp06_frank/: run.py  run_entities.py
Experiments/exp07_latency/: run.py
Experiments/exp08_conviction/: ANALYSIS_REPORT.md
Experiments/shared/: corpus_metadata.json
Experiments/tests/: conftest.py  test_aggregation.py  test_benchmark_utils.py  test_corpus_scaling.py  test_entity_extraction.py  test_frank.py  test_halueval.py  test_integration.py  test_latency.py  test_logprob_scoring.py  test_truthfulqa.py
examples/: minimal_scoring.py
ranking_inference/: __init__.py  entity_extraction.py  rank_utils.py  token_scoring.py
tests/: test_smoke.py
(+53 files in other folders)
